@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*06/07/26:
+   * Added resource and menu item for maximizing over external tabs (Mark)
+     Screen.cc/hh Window.cc
 *06/07/25:
    * Fix so that focus doesn't revert away from command dialogs (Mark)
      fluxbox.cc/hh CommandDialog.cc
